ui: align dataset copy across tabs

--- a/ybat-master/ybat.html
+++ b/ybat-master/ybat.html
@@ -997,7 +997,7 @@
                                 <button type="button" class="training-button" id="trainUploadCurrentDatasetBtn">Upload current dataset</button>
                                 <button type="button" class="training-button secondary" id="trainOpenDatasetManagerBtn">Open Dataset Management</button>
                             </div>
-                            <div class="training-help">Uploads the dataset from the labeling tab as YOLO so it appears in the cached list above.</div>
+                            <div class="training-help">Uploads the dataset from the labeling tab as YOLO so it appears in the Dataset Manager list above.</div>
                         </div>
                         <div class="training-field-double">
                             <div>
@@ -2238,7 +2238,7 @@
 		                                <select id="agentDatasetSelect"></select>
 		                                <button type="button" class="training-button" id="agentDatasetRefresh">Refresh</button>
 		                            </div>
-	                            <div class="training-help" id="agentDatasetSummary">Pick a converted SAM3/Qwen dataset.</div>
+	                            <div class="training-help" id="agentDatasetSummary">Pick a dataset from Dataset Manager (SAM3/Qwen‑ready datasets only).</div>
 			                        </div>
 				                        <div class="training-grid">
 			                            <div>
@@ -2773,7 +2773,7 @@
                                 <select id="promptHelperDatasetSelect"></select>
                                 <button type="button" class="training-button" id="promptHelperDatasetRefresh">Refresh</button>
                             </div>
-                            <div class="training-help" id="promptHelperDatasetSummary">Pick a converted SAM3/Qwen dataset.</div>
+                            <div class="training-help" id="promptHelperDatasetSummary">Pick a dataset from Dataset Manager (prompt helper requires a SAM3/Qwen‑ready dataset).</div>
                         </div>
                         <div class="training-grid">
                             <div>
